@@ -90,6 +90,7 @@
                         <include>**/*Test.java</include>
                     </includes>
                     <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
             <plugin>
